--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 *
 {
+    font-family: 'Work Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -8,7 +9,7 @@
 {
     width: 80px;
     margin-right: auto;
-    margin-left: auto;    
+    margin-left: auto;
     position: relative;
     top: 5px;
     text-align: center;
@@ -31,8 +32,55 @@ img.ytc-youtube-icon
     position: relative;
     bottom: 11px;
 }
-img.ytc-youtube-icon:hover
+
+.ytc-search-container
 {
-    width:46px;
-    bottom: 12px;
+    width: 100%;
+    text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;
 }
+
+.ytc-search-input-label
+{
+    display:block;
+    font-weight: 300;
+    font-size: 16pt;
+    text-align: left;
+}
+
+.ytc-search-button
+{
+    position: relative;
+    color: white;
+    bottom: 44px;
+    left: 50%;
+    background-color : rgba(240, 0, 0, 1);
+    border: 1px solid transparent;
+    border-radius: 360pt;
+    width: 45px;
+    height: 45px;
+    -webkit-transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.ytc-search-button:hover
+{
+    width: 50px;
+    height: 50px;
+    bottom: 47px;
+    background-color: #6799ff;  
+}
+
+.ytc-search-button:focus
+{
+    outline: none;
+    border: 1px solid whitesmoke; 
+}
+
+#ytc-search-input
+{
+    height:40px;
+}
+
+
