--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+html
+{
+    min-width: 768px;
+}
+
 *:not(.glyphicon)
 {
     font-family: 'Work Sans', sans-serif;
@@ -60,10 +65,16 @@ img.ytc-youtube-icon
 
 .ytc-search-input-label
 {
-    display:block;
-    font-weight: 300;
-    font-size: 16pt;
+    display:block;    
     text-align: left;
+}
+
+.ytc-search-input-label h1
+{
+    font-weight: 300;
+    font-size: 17pt;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .ytc-search-button
@@ -106,12 +117,19 @@ img.ytc-youtube-icon
 {
     background-color: lightgray !important;
     border:none !important;
-    color:black !important;
+    color:black !important;    
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.ytc-primary-panel-heading h2
+{
+    font-size: 13pt;
+    margin: 5px 0 5px 0 !important;
+    padding: 0 0 0 0 !important;
     overflow: hidden;
     text-overflow : ellipsis;
     white-space: nowrap;
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
 
 .ytc-loading-animation-container
@@ -123,11 +141,60 @@ img.ytc-youtube-icon
 
 .ytc-loading-animation-container img
 {
-    width: 200px;
+    width: 250px;
+    display : inline-block;
 }
 
 .ytc-panel
 {
     box-shadow: 0 5px 5px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
     border-color: lightgray;
+}
+
+.ytc-video-meta-ops
+{
+    margin-left: 20px;
+    font-size: 13px;
+    display: inline-block;
+    width : 59%;
+    vertical-align: top;
+}
+
+.ytc-panel img
+{
+    width : 35%;
+}
+
+.ytc-load-more-button, p.ytc-scroll-to-load
+{
+    margin-top : 250px;
+    margin-bottom: 50px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.ytc-load-more-button
+{
+    display: none;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
+    width : 250px;
+    height: 44px;
+}
+
+.ytc-load-more-button:active
+{
+    box-shadow:none;    
+}
+
+@media only screen and (min-width: 992px)
+{
+    .ytc-video-meta-ops
+    {
+        width: 60%;
+    }    
+}
+
+.ytc-modal-dialog
+{
+    margin-top: 35% !important;
 }
